--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/preset-env", {
       "targets": {
         "node": "current",
         "uglify": true
@@ -10,27 +10,26 @@
         "transform-regenerator"
       ]
     }],
-    "flow"
+    "@babel/preset-flow"
   ],
   "plugins": [
-    "transform-export-extensions",
-    "transform-object-rest-spread"
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-export-default-from"
   ],
   "env": {
     "lib": {
       "plugins": [
-        "transform-es2015-modules-commonjs"
+        "@babel/plugin-proposal-object-rest-spread"
       ]
     },
     "test": {
       "plugins": [
-        "transform-es2015-modules-commonjs"
+        "@babel/plugin-transform-modules-commonjs"
       ]
     },
     "dist": {
-      "plugins": [
-        "external-helpers"
-      ]
+      "plugins": []
     }
   }
 }
