--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-namespaces",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
   "description": "Namespaces for Redux actions, reducers and state.",
@@ -43,16 +43,18 @@
     "starts-with": "^1.0.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.1.1",
-    "babel-jest": "^20.0.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-flow": "^6.23.0",
-    "coveralls": "^2.13.1",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
+    "coveralls": "^3.0.6",
     "cross-env": "^5.0.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
@@ -63,13 +65,13 @@
     "eslint-plugin-react": "^6.9.0",
     "flow-bin": "^0.49.1",
     "flow-typed": "^2.1.2",
-    "jest": "^20.0.4",
+    "jest": "^24.8.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "redux": "^3.7.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.43.0",
-    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-babel": "^4.0.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
